--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   },
   "dependencies": {
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "pemutils": "^1.0.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "@types/jest": "^23.1.1",
+    "@types/moment-timezone": "^0.5.6",
     "@types/node": "^8.0.0",
     "coveralls": "^2.0.0",
     "jest": "^23.1.0",
